--- a/style.css
+++ b/style.css
@@ -74,6 +74,13 @@
   color: black;
 }
 
+#map {
+  width: 100%;
+  max-width: 1240px;
+  margin: 0 auto;
+  display: block;
+}
+
 @media screen and (max-width: 900px) {
   #form {
     grid-template-columns: 100%;
