--- a/style.css
+++ b/style.css
@@ -81,6 +81,46 @@ body {
   color: black;
 }
 
+.radio input {
+  display: none;
+}
+
+.radio label {
+  display: block;
+  padding: 25px 10px;
+  cursor: pointer;
+  background-color: #ededed;
+  height: 100%;
+  font-weight: 500;
+  text-align: center;
+  box-sizing: border-box;
+  border-bottom: 1px solid lightgray;
+}
+
+.radio input:checked + label {
+  background-color: #fafafa;
+  border-bottom: 1px solid transparent;
+}
+
+.radio input:disabled + label {
+  cursor: not-allowed;
+}
+
+.radio input:hover + label {
+  opacity: 0.9;
+}
+
+.form_radio_group {
+  display: flex;
+  justify-content: space-around;
+  align-items: stretch;
+  flex-wrap: wrap;
+}
+
+.radio {
+  flex: 25%;
+}
+
 #map {
   width: 100%;
   max-width: 1240px;
